# hw10_django

./: 11111111.txt  pyproject.toml
hw_project/: manage.py  requirements.txt
hw_project/hw_project/: asgi.py  settings.py  urls.py
hw_project/quotes/: auth.py  forms.py  models.py  register.html  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  _initial.py  _user.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  base.html  index.html  login.html  signup.html
hw_project/quotes/templatetags/: estract.py
hw_project/quotes/templatetags/__pycache__/: extract.py
hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py  qoutes.json
