[tool.poetry]
name = "m16-10-02"
version = "0.1.0"
description = ""
authors = ["Petrovskiy Andriy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
pillow = "^10.1.0"
django-environ = "^0.11.2"
pymongo = "^4.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"